# psec

./: AGENTS.md  Makefile  pyproject.toml  requirements-dev.txt  setup.cfg
psec/: aes.py  tr31.py
tests/: test_tr31.py
